--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   </head>
-  <body>
+  <body style="margin: 0; padding: 0; font-family: sans-serif;">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
